template-rt0207.yml
# 課題用のCloudFormationテンプレート
AWSTemplateFormatVersion: '2010-09-09'
Description: Create VPC,EC2,ELB

# Parametersセクション
Parameters:
  VpcCIDR:
    Type: String
    Default: 10.0.0.0/16
  PublicSubnet1aCIDR:
    Type: String
    Default: 10.0.0.0/24
  PublicSubnet1cCIDR:
    Type: String
    Default: 10.0.1.0/24
  PrivateSubnet1aCIDR:
    Type: String
    Default: 10.0.2.0/24
  PrivateSubnet1cCIDR:
    Type: String
    Default: 10.0.3.0/24
  AllCIDR:
    Type: String
    Default: 0.0.0.0/0


# Resourcesセクション
Resources:
  # VPC定義
  VpcRT0207:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: VpcRT0207

  # インターネットゲートウェイ定義
  InternetGatewayRT0207:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: InternetGatewayRT0207

  # インターネットゲートウェイ-VPC関連付け定義
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGatewayRT0207
      VpcId: !Ref VpcRT0207

  # パブリックサブネット定義
  PublicSubnet1aRT0207:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast_1a
      CidrBlock: !Ref PublicSubnet1aCIDR
      VpcId: !Ref VpcRT0207
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PublicSubnet1aRT0207
  PublicSubnet1cRT0207:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      CidrBlock: !Ref PublicSubnet1cCIDR
      VpcId: !Ref VpcRT0207
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PublicSubnet1cRT0207

  # プライベートサブネット定義
  PrivateSubnet1aRT0207:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      CidrBlock: !Ref PrivateSubnet1aCIDR
      VpcId: !Ref VpcRT0207
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PrivateSubnet1aRT0207
  PrivateSubnet1cRT0207:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      CidrBlock: !Ref PrivateSubnet1cCIDR
      VpcId: !Ref VpcRT0207
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PrivateSubnet1cRT0207

  # セキュリティグループ定義
  SecurityGroupRT0207:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SecurityGroupRT0207
      SecurityGroupIngress:
        - CidrIp: !Ref AllCIDR
          Description: inbound for ssh
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref AllCIDR
          Description: inbound for http
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      SecurityGroupEgress:
        - CidrIp: !Ref AllCIDR
          Description: outbound for all
          FromPort: -1
          IpProtocol: -1
          ToPort: -1
      VpcId: !Ref VpcRT0207
      Tags:
        - Key: Name
          Value: SecurityGroupRT0207
  RDSSecurityGroupRT0207:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RDSSecurityGroupRT0207
      SecurityGroupIngress:
        - CidrIp: !Ref AllCIDR
          Description: inbound for mysql
          FromPort: 3306
          IpProtocol: tcp
          ToPort: 3306
      SecurityGroupEgress:
        - CidrIp: !Ref AllCIDR
          Description: outbound for all
          FromPort: -1
          IpProtocol: -1
          ToPort: -1
      VpcId: !Ref VpcRT0207
      Tags:
        - Key: Name
          Value: RDSSecurityGroupRT0207

  # ルートテーブル定義
  PublicRouteTableRT0207:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcRT0207
      Tags:
        - Key: Name
          Value: PublicRouteTableRT0207
  DefaultPublicRouteTableRT0207:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTableRT0207
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayRT0207
  PublicSubnet1RouteTableAssociationRT0207:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableRT0207
      SubnetId: !Ref PublicSubnet1aRT0207
  PublicSubnet2RouteTableAssociationRT0207:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableRT0207
      SubnetId: !Ref PublicSubnet1cRT0207

  # EIP定義
  EIPRT0207:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EIPRT0207

  #EIP-EC2関連定義
  EIPToEC2RT0207:
    Type: AWS::EC2::EIPAssociation
    Properties:
      EIP: !Ref EIPRT0207
      InstanceId: !Ref EC21aRT0207


  # EC2インスタンス定義
  EC21aRT0207:
    Type: AWS::EC2::Instance
    Properties:
      DisableApiTermination: false
      ImageId: ami-01748a72bed07727c
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: t2.micro
      KeyName: key-pair-01
      Monitoring: false
      SecurityGroupIds:
        - !Ref SecurityGroupRT0207
      SourceDestCheck: true
      SubnetId: !Ref PublicSubnet1aRT0207
      Tags:
        - Key: Name
          Value: EC21aRT0207
      Tenancy: default

  EC21cRT0207:
    Type: AWS::EC2::Instance
    Properties:
      DisableApiTermination: false
      ImageId: ami-01748a72bed07727c
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: t2.micro
      KeyName: key-pair-01
      Monitoring: false
      SecurityGroupIds:
        - !Ref SecurityGroupRT0207
      SourceDestCheck: true
      SubnetId: !Ref PublicSubnet1cRT0207
      Tags:
        - Key: Name
          Value: EC21cRT0207
      Tenancy: default

  # RDS定義
  RDSRT0207:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: true
      AutoMinorVersionUpgrade: true
      AvailabilityZone: ap-northeast-1a
      DBInstanceClass: db.t2.micro
      VPCSecurityGroups:
        - !Ref RDSSecurityGroupRT0207
      DBSubnetGroupName: !Ref RDSSubnetGroupRT0207
      DeleteAutomatedBackups: false
      DeletionProtection: false
      EnableIAMDatabaseAuthentication: false
      Engine: MySQL
      EngineVersion: 8.0.21
      MasterUsername: root
      MasterUserPassword: rootpass
      MonitoringInterval: 0
      MultiAZ: false
      Port: 3306
      PubliclyAccessible: false
      StorageEncrypted: false
      StorageType: standard
      Tags:
        - Key: Name
          Value: RDS_rt0207
      UseDefaultProcessorFeatures: true

  # RDSサブネットグループ定義
  RDSSubnetGroupRT0207:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: RDSSubnetGroupRT0207
      SubnetIds:
        - !Ref PrivateSubnet1aRT0207
        - !Ref PrivateSubnet1cRT0207
      Tags:
        - Key: Name
          Value: RDSSubnetGroupRT0207
